--- a/q3.Rmd
+++ b/q3.Rmd
@@ -58,7 +58,7 @@ ggplot(mtcars, aes(x = factor(gear), y = mpg, fill = factor(gear))) +geom_boxplo
 mdl <- lm(dist ~ speed, data = cars)
 summary(mdl)
 ```
-The speed is given in mph and the stopping distance is given in feet. The intercept is -17.57 feet and the stopping distance increases by 3.93 feet for each 1 mph increase in speed. The standard errors are 6.76 for the intercept and 0.415 for speed. The intercept is significant at the 0.05 level and the speed variable is significant at the 0.001 level.
+The speed is given in mph and the stopping distance is given in feet. The intercept is -17.579 feet and the stopping distance increases by 3.932 feet for each 1 mph increase in speed (the fitted slope). The standard errors are 6.758 for the intercept and 0.416 for speed. The intercept is significant at the 0.05 level and the speed variable is significant at the 0.001 level.
 Note that very low speeds result in a negative predicted stopping distance, which is an artefact of the regression and predicted values should only be used above this threshold.
 
 
